--- a/index.html
+++ b/index.html
@@ -1,12 +1,142 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Нёрдс</title>
+</head>
 
-  </body>
+<body>
+
+  <header>
+    <nav>
+      <a>
+        <img src="img/nerds-logo.svg" width="159.87" height="65.02" alt="Логотип Нёрдс">
+      </a>
+      <ul>
+        <li><a href="blank.html"></a>Студия</li>
+        <li><a href="blank.html"></a>Клиенты</li>
+        <li><a href="catalog.html"></a>Магазин</li>
+        <li><a href="blank.html"></a>Контакты</li>
+      </ul>
+      <a><button type="button">ярлык</button>Корзина</a>
+    </nav>
+  </header>
+
+  <main>
+    <h1>Нёрдс</h1>
+    <section>
+      <h2>Информация</h2>
+      <p><b>Долго, дорого,<br>
+          скурпулезно.</b></p>
+      <p>Математически выверенный дизайн<br>
+        для вашего сайта или мобильного приложения.</p>
+      <button type="button">УЗНАТЬ БОЛЬШЕ</button>
+    </section>
+    <section>
+      <h2>Продукты</h2>
+      <ul>
+        <li>
+          <h3>Веб-сайты</h3>
+          <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+          <button type="button">Заказать</button>
+        </li>
+        <li>
+          <h3>Приложения</h3>
+          <p>Покорите топ-10 приложений<br>
+            в AppStore и Google Play</p>
+          <button type="button">Заказать</button>
+        </li>
+        <li>
+          <h3>Презентации</h3>
+          <p>Вы даже не подозреваете, <br>
+            насколько вы изумительны!</p>
+          <button type="button">Заказать</button>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>О нас</h2>
+      <p><b>Мы — маленькая, но гордая <br>
+          дизайн-студия из Краснодара.</b></p>
+      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет <br>
+        превыше креатива. Работаем не покладая рук, как роботы.</p>
+      <p><b>Выполняем заказы на разработку:</b></p>
+      <ul>
+        <li> Веб-сайтов любой сложности</li>
+        <li>Мобильных приложений для iOS и Android</li>
+        <li>Слайдшоу и видео для корпоративных презентаций</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Статистика</h2>
+      <p><b>с 2004 года Любим точность во всем:</b></p>
+      <ul>
+        <li>
+          <p><span>146</span>%</p>
+          <p>Уровень<br>
+            самоотдачи</p>
+        </li>
+        <li>
+          <p><span>100</span>%</p>
+          <p>Соблюдение<br>
+            сроков</p>
+        </li>
+        <li>
+          <p><span>50</span>%</p>
+          <p>Минимальная<br>
+            предоплата</p>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Партнеры</h2>
+      <ul>
+        <li>
+          <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy</a>
+        </li>
+        <li>
+          <a href="#">Барбершоп</a>
+        </li>
+        <li>
+          <a href="#">Pink</a>
+        </li>
+        <li>
+          <a href="#">Мишка</a>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <section>
+      <!--Здесь будет карта-->
+    </section>
+    <section>
+      <h2>Контакты</h2>
+      <p>NЁRDS DESIGN STUDIO</p>
+      <p>191186, Санкт-Петербург,<br>
+        ул. Б. Конюшенная, д. 19/8<br>
+        тел. +7 (812) 275-75-75</p>
+      <button type="button">Напишите нам</button>
+    </section>
+    <section>
+      <h2>Давайте дружить!</h2>
+      <ul>
+        <li>
+          <a href="#">Вконтакте</a>
+        </li>
+        <li>
+          <a href="#">Фейсбук</a>
+        </li>
+        <li>
+          <a href="#">Инстаграм</a>
+        </li>
+      </ul>
+      <p><b>Давайте дружить, это выгодно!</b></p>
+      <p>Скидка 10% для друзей из социальных сетей.</p>
+    </section>
+  </footer>
+
+</body>
+
 </html>
