--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <img src="img/nerds-logo.svg" width="159.87" height="65.02" alt="Логотип Нёрдс">
       </a>
       <ul>
-        <li><a href="blank.html"></a>Студия</li>
-        <li><a href="blank.html"></a>Клиенты</li>
-        <li><a href="catalog.html"></a>Магазин</li>
-        <li><a href="blank.html"></a>Контакты</li>
+        <li><a href="blank.html">Студия</a></li>
+        <li><a href="blank.html">Клиенты</a></li>
+        <li><a href="catalog.html">Магазин</a></li>
+        <li><a href="blank.html">Контакты</a></li>
       </ul>
       <a><button type="button">ярлык</button>Корзина</a>
     </nav>
