--- a/blank.html
+++ b/blank.html
@@ -19,9 +19,10 @@
                 <li><a href="catalog.html">Магазин</a></li>
                 <li><a href="blank.html">Контакты</a></li>
             </ul>
-            <a><button type="button">ярлык</button>Корзина</a>
+            <a href="blank.html">Корзина</a>
         </nav>
     </header>
+    <main>
 
     </main>
     <footer>
@@ -34,7 +35,7 @@
             <p>191186, Санкт-Петербург,<br>
                 ул. Б. Конюшенная, д. 19/8<br>
                 тел. +7 (812) 275-75-75</p>
-            <button type="button">Напишите нам</button>
+            <a href="blank.html">Напишите нам</a>
         </section>
         <section>
             <h2>Давайте дружить!</h2>
