--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <a href="blank.html">Узнать больше</a>
                         <img src="">
                     </div>
-                    <div id="slide2">
+                    <div>
                         <p><b>Любим математику<br>
                                 как никто другой</b></p>
                         <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
@@ -55,9 +55,9 @@
                     </div>
                 </div>
                 <ul>
-                    <li><button type="button">slide1</button></li>
-                    <li><button type="button">slide2</button></li>
-                    <li><button type="button">slide3</button></li>
+                    <li><button type="button">Слайд 1</button></li>
+                    <li><button type="button">Слайд 2</button></li>
+                    <li><button type="button">Слайд 3</button></li>
                 </ul>
             </div>
 
