--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <a href="index.html">
-                <img src="img/nerds-logo.svg" width="159.87" height="65.02" alt="Логотип Нёрдс">
+                <img src="img/logo/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
             </a>
             <ul>
                 <li><a href="blank.html">Студия</a></li>
@@ -107,7 +107,7 @@
             <ul>
                 <li>
                     <a href="blank.html">
-                        <img src="" width="358" height="578" alt="Седона">
+                        <img src="img/templates/sedona.jpg" width="358" height="578" alt="Седона">
                     </a>
                     <a href="blank.html">
                         <h3>Седона</h3>
@@ -120,7 +120,7 @@
                 </li>
                 <li>
                     <a href="blank.html">
-                        <img src="" width="358" height="578" alt="Пинк">
+                        <img src="img/templates/pink.jpg" width="358" height="578" alt="Пинк">
                     </a>
                     <a href="blank.html">
                         <h3>Pink App</h3>
@@ -133,7 +133,7 @@
                 </li>
                 <li>
                     <a href="blank.html">
-                        <img src="" width="358" height="578" alt="Барбершоп">
+                        <img src="img/templates/barbersop.jpg" width="358" height="578" alt="Барбершоп">
                     </a>
                     <a href="blank.html">
                         <h3>Barbershop</h3>
@@ -146,7 +146,7 @@
                 </li>
                 <li>
                     <a href="blank.html">
-                        <img src="" width="358" height="578" alt="Мишка">
+                        <img src="img/templates/mishka.jpg" width="358" height="578" alt="Мишка">
                     </a>
                     <a href="blank.html">
                         <h3>MISHKA</h3>
@@ -159,7 +159,7 @@
                 </li>
                 <li>
                     <a href="blank.html">
-                        <img src="" width="358" height="578" alt="A Plus">
+                        <img src="img/templates/a-plus.jpg" width="358" height="578" alt="A Plus">
                     </a>
                     <a href="blank.html">
                         <h3>A Plus</h3>
@@ -170,7 +170,7 @@
                     </a>
                 </li>
                 <a href="blank.html">
-                    <img src="" width="358" height="578" alt="КВАСТ">
+                    <img src="img/templates/kvast.jpg" width="358" height="578" alt="КВАСТ">
                 </a>
                 <a href="blank.html">
                     <h3>КВАСТ</h3>
@@ -199,7 +199,8 @@
     </main>
     <footer>
         <section>
-            <!--Здесь будет карта-->
+            <img src="img/map.jpg" width="1440" height="416" alt="Карта проезда к студии Нердс">
+            <img src="img/map-marker.png" width="231" height="190" alt="">
         </section>
         <section>
             <h2>Контакты</h2>
@@ -213,13 +214,13 @@
             <h2>Давайте дружить!</h2>
             <ul>
                 <li>
-                    <a href="#">Вконтакте</a>
+                    <a href="#"><img src="img/icon/vk-icon.png" width="26" height="15" alt="Вконтакте"></a>
                 </li>
                 <li>
-                    <a href="#">Фейсбук</a>
+                    <a href="#"><img src="img/icon/fb-icon.png" width="12" height="22" alt="Фейсбук"></a>
                 </li>
                 <li>
-                    <a href="#">Инстаграм</a>
+                    <a href="#"><img src="img/icon/insta-icon.png" width="21" height="21" alt="Инстаграм"></a>
                 </li>
             </ul>
             <p><b>Давайте дружить, это выгодно!</b></p>
