--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="apple.png">
+    <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body>
@@ -11,7 +15,7 @@
     <header>
         <nav>
             <a>
-                <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
+                <img src="img/logo/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
             </a>
             <ul>
                 <li><a href="blank.html">Студия</a></li>
@@ -36,14 +40,15 @@
                         <p>Математически выверенный дизайн<br>
                             для вашего сайта или мобильного приложения.</p>
                         <a href="blank.html">Узнать больше</a>
-                        <img src="">
+                        <img src="img/slider/nerds-index-slide1.png" width="760" height="431" alt="">
+                        <!--не вижу смысла называть альт т.к. нет смысловой нагрузки в изображении-->
                     </div>
                     <div>
                         <p><b>Любим математику<br>
                                 как никто другой</b></p>
                         <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
                         <a href="blank.html">Узнать больше</a>
-                        <img src="">
+                        <img src="img/slider/nerds-index-slide2.png" width="760" height="431" alt="">
                     </div>
                     <div>
                         <p><b>Только ночь,<br>
@@ -51,7 +56,7 @@
                         <p>Работать днем, как все? Мы против этого.
                             Ближе к полуночи работа только начинается.</p>
                         <a href="blank.html">Узнать больше</a>
-                        <img src="">
+                        <img src="img/slider/nerds-index-slide3.png" width="760" height="431" alt="">
                     </div>
                 </div>
                 <ul>
@@ -67,17 +72,23 @@
             <ul>
                 <li>
                     <h3>Веб-сайты</h3>
-                    <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+                    <img src="img/illustration/illustration-1.png" width="300" height="146" alt="Изображение сайта">
+                    <p>Мир никогда не будет прежним после того как увидит
+                        ваш сайт!</p>
                     <a href="blank.html">Заказать</a>
                 </li>
                 <li>
                     <h3>Приложения</h3>
+                    <img src="img/illustration/illustration-2.png" width="300" height="146"
+                        alt="Изображение приложения">
                     <p>Покорите топ-10 приложений<br>
                         в AppStore и Google Play</p>
                     <a href="blank.html">Заказать</a>
                 </li>
                 <li>
                     <h3>Презентации</h3>
+                    <img src="img/illustration/illustration-3.png" width="300" height="146"
+                        alt="Изображение Презентации">
                     <p>Вы даже не подозреваете, <br>
                         насколько вы изумительны!</p>
                     <a href="blank.html">Заказать</a>
@@ -96,6 +107,8 @@
                 <li>Мобильных приложений для iOS и Android</li>
                 <li>Слайдшоу и видео для корпоративных презентаций</li>
             </ul>
+            <img src="img/illustration/nerds-illustration.png" width="360" height="208"
+                alt="Праздничное изображение логотипа Нёрдс">
             <h3>Статистика</h3>
             <p><b>с 2004 года Любим точность во всем:</b></p>
             <ul>
@@ -121,22 +134,22 @@
             <ul>
                 <li>
                     <a href="https://htmlacademy.ru/intensive/htmlcss">
-                        <img src="" alt="htmlacademy">
+                        <img src="img/logo/logo-1.png" width="199" height="68" alt="htmlacademy">
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="" alt="Барбершоп">
+                        <img src="img/logo/logo-2.png" width="209" height="90" alt="Барбершоп">
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="" alt="Pink">
+                        <img src="img/logo/logo-3.png" width="185" height="52" alt="Pink">
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="" alt="Мишка">
+                        <img src="img/logo/logo-4.png" width="172" height="84" alt="Мишка">
                     </a>
                 </li>
             </ul>
@@ -144,7 +157,8 @@
     </main>
     <footer>
         <section>
-            <!--Здесь будет карта-->
+            <img src="img/map.jpg" width="1440" height="416" alt="Карта проезда к студии Нердс">
+            <img src="img/map-marker.png" width="231" height="190" alt="">
         </section>
         <section>
             <h2>Контакты</h2>
@@ -158,13 +172,13 @@
             <h2>Давайте дружить!</h2>
             <ul>
                 <li>
-                    <a href="#">Вконтакте</a>
+                    <a href="#"><img src="img/icon/vk-icon.png" width="26" height="15" alt="Вконтакте"></a>
                 </li>
                 <li>
-                    <a href="#">Фейсбук</a>
+                    <a href="#"><img src="img/icon/fb-icon.png" width="12" height="22" alt="Фейсбук"></a>
                 </li>
                 <li>
-                    <a href="#">Инстаграм</a>
+                    <a href="#"><img src="img/icon/insta-icon.png" width="21" height="21" alt="Инстаграм"></a>
                 </li>
             </ul>
             <p><b>Давайте дружить, это выгодно!</b></p>
