стилизация внутренней страницы

--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
   </footer>
   <section class="modal">
     <h2 class="modal-title">Напишите нам</h2>
-    <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
+    <form class=feedback-form" action="https://echo.htmlacademy.ru" method="post">
       <p class="field">
-        <label class="field-label" for="login-login">Ваше имя:</label>
-        <input class="field-input login-user" id="login-login" type="text" name="login" placeholder="Имя Фамилия">
+        <label class="field-label" for="login-name">Ваше имя:</label>
+        <input class="field-input login-user" id="login-name" type="text" name="name" placeholder="Имя Фамилия">
       </p>
       <p class="field">
         <label class="field-label" for="login-email">Ваш email:</label>
