--- a/catalog.html
+++ b/catalog.html
@@ -114,7 +114,7 @@
         </form>
       </section>
       <section class="main-sorting">
-        <h2 class="filter-title">Сортировать:</h2>
+        <h2 class="filter-title filter-title-sorting">Сортировать:</h2>
         <h3 class="visually-hidden">Тип сортировки</h3>
         <ul class="sorting-type-list">
           <li>
@@ -127,7 +127,6 @@
             <a class="sorting-item" href="blank.html">по названию</a>
           </li>
         </ul>
-
         <h3 class="visually-hidden">Направление сортировки</h3>
         <ul class="sorting-direction-list">
           <li>
