--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       <p class="social-title"><b>Давайте дружить, это выгодно!</b></p>
       <p class="social-text">Скидка 10% для друзей из социальных сетей.</p>
     </section>
-  </footer>>
+  </footer>
   <section class="modal">
     <h2 class="modal-title">Напишите нам</h2>
     <form class=feedback-form" action="https://echo.htmlacademy.ru" method="post">
